--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,15 @@ python-socketio
 python-engineio==4.3.1
 gunicorn==20.1.0
 eventlet==0.33.0
+
+Flask-Redis
+schedule
+pandas
+
+scikit-learn
+
+tensorflow
+
+jsonify
+redis
+APScheduler
