--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==2.1.1
+Flask==2.0.1
 Flask-SocketIO
 python-socketio
-python-engineio==4.3.1
+python-engineio==4.3
 gunicorn==20.1.0
 eventlet==0.33.0
 
@@ -16,3 +16,22 @@ tensorflow
 jsonify
 redis
 APScheduler
+
+stripe
+requests
+flask_login
+flask_wtf
+wtforms
+SQLAlchemy==1.3.23
+
+Flask-SQLAlchemy==2.5.1
+
+pandas
+numpypip 
+
+xgboost
+
+wtforms[email]
+
+
+
